# server/server.js
@@ -50,101 +50,104 @@ app.get('/', (req, res, next) => {
   res.send('Hello from my Express server v2!')
 })
 
-let inventory = [
-  {
-    id:1,
-    transactions_type:"",
+let  transactions = [
+  { id: 1, date: 'June 20th, 2020', amount: 5, balance: 2082.79, extra: {
+    transactions_type: "electronics type",
     category:"",
-    notes:"",
-    transactions: [
-      { id: 1, date: 'June 20th, 2020', amount: 5, balance: 2082.79 },
-      { id: 2, date: 'June 20th, 2020', amount: 10, balance: 2087.79 },
-      { id: 3, date: 'June 20th, 2020', amount: 20, balance: 2097.79 },
-      { id: 4, date: 'June 20th, 2020', amount: 30, balance: 2117.79 },
-      { id: 5, date: 'June 20th, 2020', amount: 40, balance: 2147.79 },
-      { id: 6, date: 'June 20th, 2020', amount: 50, balance: 2187.79 },
-    ]
-  }
+    notes:""
+  }, },
+  { id: 2, date: 'June 20th, 2020', amount: 10, balance: 2087.79, extra: {
+    transactions_type: "electronics type",
+    category:"",
+    notes:""
+  }, },
+  { id: 3, date: 'June 20th, 2020', amount: 20, balance: 2097.79, extra: {
+    transactions_type: "electronics type",
+    category:"",
+    notes:""
+  }, },
+  { id: 1, date: 'June 20th, 2020', amount: 30, balance: 2117.79, extra: {
+    transactions_type: "electronics type",
+    category:"",
+    notes:""
+  }, },
+  { id: 1, date: 'June 20th, 2020', amount: 40, balance: 2147.79, extra: {
+    transactions_type: "electronics type",
+    category:"",
+    notes:""
+  }, },
+  { id: 1, date: 'June 20th, 2020', amount: 50, balance: 2187.79, extra: {
+    transactions_type: "electronics type",
+    category:"",
+    notes:""
+  }, },
 ]
 
 app.get('/api/v1/user/transactions', (req, res) => {
-  res.status(200).send(inventory[0].transactions)
-  return;
-})
-
-app.get('/api/v1/user/inventories', (req, res) => {
-  res.status(200).send(inventory)
+  res.status(200).send(transactions)
   return;
 })
 
 
-app.patch('/api/v1/user/inventory/:id', (req, res) => {
-  const { id } = req.params
-  const body = req.body
-  inventory.map((response) => {
-    if (response.id === parseInt(id)) {
-      response.transactions_type = body.type
-      response.category = body.category
-      response.notes = body.notes
-    }
-  })
-  
-  res.status(200).send({message:"inventory updated successfully"})
-  return;
-})
+
 
 app.get('/api/v1/user/transaction/:id', (req, res) => {
   const { id } = req.params
-  const response = inventory[0].transactions.filter((item) => item.id === parseInt(id))
+  const response = transactions.filter((item) => item.id === parseInt(id))
   res.status(200).send(response)
   return;
 })
 
 app.delete('/api/v1/user/transactions/:id', (req, res) => {
   const { id } = req.params
-
-
-  for (let i = 0; i < inventory[0].transactions.length; i++) {
-
-    if (inventory[0].transactions[i].id === parseInt(id)) {
-      const response = inventory[0].transactions.splice(i, 1)
-      res.status(200).send({ response, message: "Transaction deleted successfully" })
-      return
-    }
-
-    res.status(200).send({ data: [], message: "Transaction not found" })
-    return
-  }
-
+  const response = transactions.filter((item) => item.id !== parseInt(id))
+  transactions = response;
+  return res.status(200).send({message: "Transaction deleted successfully" })
 
 })
 
-app.patch('/api/v1/user/transactions/:id', (req, res) => {
-  const { id } = req.params
+app.patch('/api/v1/user/transactions/:transaction_id', (req, res) => {
+  const { transaction_id } = req.params
+ 
   const body = req.body;
 
-  inventory[0].transactions.map((response) => {
-    if (response.id === parseInt(id)) {
+    transactions.map((response) => {
+    if (response.id === parseInt(transaction_id)) {
       response.date = body.date;
       response.amount = body.amount
       response.balance = body.balance
+      response.extra = {
+          transactions_type: body.extra.transactions_type,
+          category: body.extra.category,
+          notes: body.extra.notes
+      }
     }
-
-    res.status(200).send("Transaction updated successfully")
-    return
+    return  res.status(200).send("Transaction updated successfully");
+   
   })
 
-
-
-  res.status(200).send(response)
-  return;
+  return res.status(200).send('failed to update transaction')
+  
+ 
 })
 
 app.post('/api/v1/user/transaction', (req, res) => {
   const body = req.body
-  inventory[0].transactions.push(body)
-  res.status(200).send(transactions)
-  return;
+  const id = parseInt(body.id)
+  
+  const exist = transactions.filter((item)=>item.id === id);
+
+    if(exist.length > 0 ){
+      return res.status(200).send('Transaction alrady exist')
+    }
+
+  transactions.push({
+    ...body,
+    id:id
+  });
+
+  return res.status(200).send(transactions)
+  
 })
 
 // app.get('/api/users/items', (req, res) => {
